# 1cmaintenance

./: .gitignore  README.md
1CMaintenance/: CMakeLists.txt  commontab.cpp  commontab.h  data.qrc  global.cpp  global.h  ibdescwgt.cpp  ibdescwgt.h  ibfield.cpp  ibfield.h  ibstab.cpp  ibstab.h  icons.qrc  initdb.sql  listwgt.cpp  listwgt.h  main.cpp  mainwindow.cpp  mainwindow.h  storage.cpp  storage.h  taskstab.cpp  taskstab.h  taskwizard.cpp  taskwizard.h  toolkit.cpp  toolkit.h
gnu/: 1cmaintenance
gnu/pg/: archive_bin.sh  archive_log.sh  common.sh  main.sh  settings.sh.example
scripts/: README.md
scripts/gnu/pg/: archive_bin.sh  settings.sh.example
scripts/win/file/: archive_bin.bat
scripts/win/pg/: archive_log.bat  main.bat  settings2.bat.example
win/: reduce_elog.bat  settings.bat.example
win/file/: archive_bin.bat  main.bat
win/pg/: archive_bin.bat  main.bat
